// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/request_button/request_button.jsx should match snapshot 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="btn btn-tertiary"
          type="button"
        >
          <span>
            Button Text
          </span>
        </button>
      </div>
      <div
        class="help-text"
      >
        <span>
          Help Text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="btn btn-tertiary"
          type="button"
        >
          <span>
            Button Text
          </span>
        </button>
        <div>
          <div
            class="alert alert-warning"
          >
            <i
              class="fa fa-warning"
              title="Warning Icon"
            />
            <span>
              Error Message: __message__ - __detailed_error__
            </span>
          </div>
        </div>
      </div>
      <div
        class="help-text"
      >
        <span>
          Help Text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 2`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="btn btn-tertiary"
          type="button"
        >
          <span>
            Button Text
          </span>
        </button>
        <div>
          <div
            class="alert alert-warning"
          >
            <i
              class="fa fa-warning"
              title="Warning Icon"
            />
            <span>
              Error Message: __message__
            </span>
          </div>
        </div>
      </div>
      <div
        class="help-text"
      >
        <span>
          Help Text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="btn btn-tertiary"
          type="button"
        >
          <span>
            Button Text
          </span>
        </button>
        <div>
          <div
            class="alert alert-success"
          >
            <i
              class="fa fa-check"
              title="Success Icon"
            />
            <span>
              Success Message
            </span>
          </div>
        </div>
      </div>
      <div
        class="help-text"
      >
        <span>
          Help Text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 2`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="btn btn-tertiary"
          type="button"
        >
          <span>
            Button Text
          </span>
        </button>
      </div>
      <div
        class="help-text"
      >
        <span>
          Help Text
        </span>
      </div>
    </div>
  </div>
</div>
`;
